--- a/static/html/index.html
+++ b/static/html/index.html
@@ -16,7 +16,7 @@
     </div>
     <template id="trip">
         <div class="my-3 rounded-md outline-1 box-border border-2 shadow-md flex justify-between gap-x-6 py-5 flex min-w-0 gap-x-4 space-x-4 px-5"
-            hx-get="api/mocked/get_trips/?n={{n}}" hx-include="[name='search']" hx-trigger="revealed" hx-swap="afterend"
+            hx-get="/api/mocked/get_trips/?n={{n}}" hx-include="[name='search']" hx-trigger="revealed" hx-swap="afterend"
             mustache-template="trip">
             <div>
                 <p class="break-afer-auto text-sm font-semibold leading-6 text-gray-900">
