--- a/static/html/search.html
+++ b/static/html/search.html
@@ -2,5 +2,5 @@
     name="search" hx-get="/api/mocked/get_trips" hx-trigger="input changed delay 250ms, search" hx-swap="innerHTML"
     hx-target="#results" class="form-control" type="search" mustache-template="trip" />
 <div id="results">
-    <p class="my-10 items-center text-center justify-between mx-auto">Start typing te see the results...</p>
+    <p class="my-10 items-center text-center justify-between mx-auto">Start typing to see the results...</p>
 </div>
