--- a/static/html/search.html
+++ b/static/html/search.html
@@ -1,4 +1,4 @@
-<label for="destination">Destination:</label><input class="w-full rounded-md my-2 bg-transparent px-4 py-1 text-gray-400 focus:outline-none outline-1 border-2"
+<input class="w-full rounded-md my-2 bg-transparent px-4 py-1 text-gray-400 focus:outline-none outline-1 border-2"
     name="destination" hx-get="/api/tour_offers/get_trips" hx-trigger="input changed delay 250ms, search" hx-swap="innerHTML"
     hx-target="#results" class="form-control" type="search" />
 <input class="w-full rounded-md my-2 bg-transparent px-4 py-1 text-gray-400 focus:outline-none outline-1 border-2"
