--- a/static/html/index.html
+++ b/static/html/index.html
@@ -8,7 +8,7 @@
 <body>
 	<script src="https://unpkg.com/htmx.org@1.9.11"></script>
 	<script src="https://unpkg.com/htmx.org@1.9.11/dist/ext/client-side-templates.js"></script>
-	<script src="https://unpkg.com/mustache@latest"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<span hx-get="/api/test" hx-trigger="load"></span>
 	<button type="button" hx-get="/api/auth/logout">Logout</button>
@@ -20,40 +20,144 @@
 		<div
 			class="my-3 rounded-md outline-1 box-border border-2 shadow-md flex justify-between gap-x-6 py-5 flex min-w-0 gap-x-4 space-x-4 px-5"
 			hx-get="/api/mocked/get_trips/?n={{n}}" hx-include="[name='search']" hx-trigger="revealed" hx-swap="afterend"
-			mustache-template="trip">
+			handlebars-template="trip">
 			<div>
-				<p class="break-afer-auto text-sm font-semibold leading-6 text-gray-900">
+				<p class="break-afer-auto text-base font-semibold leading-6 text-gray-900">
 					{{name}} </p>
-				<p class="mt-1 truncate text-xs leading-5 text-gray-500">{{description}}</p>
+				<p class="mt-1 truncate text-xs leading-5 text-gray-500">{{{description}}}</p>
 			</div>
 			<div>
 				<button type="button"
 					class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-					hx-get="/api/mocked/trip/?id={{id}}" hx-target="#container" mustache-template="trip_details"
+					hx-get="/api/mocked/trip/?id={{id}}" hx-target="#container" handlebars-template="trip_details"
 					hx-swap="innerHTML">Details</button>
 			</div>
 		</div>
 	</template>
-	<template id="trip_details">
+	<template id="trip_details" >
 		<div
 			class="my-3 rounded-md outline-1 box-border border-2 shadow-md flex justify-between gap-x-6 py-5 flex min-w-0 gap-x-4 space-x-4 px-5">
 			<div>
-				<p class="break-afer-auto text-sm font-semibold leading-6 text-gray-900">
-					{{name}} </p>
-				<p class="mt-1 truncate text-xs leading-5 text-gray-500">{{description}}</p>
+				<p class="break-afer-auto text-base font-semibold leading-7 text-gray-900">
+					{{name}} {{stars hotel.hotel_rating}}</p>
+				<p class="mt-1 text-xs leading-6 text-gray-500">{{{description}}}</p>
+				<dl class="divide-y divide-gray-100 py-2">
+					<div class="px-4 py-3 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+						<dt class="text-sm font-medium leading-6 text-gray-900">Start date</dt>
+						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{start_date}}</dd>
+					</div>
+					<div class="px-4 py-3 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+						<dt class="text-sm font-medium leading-6 text-gray-900">End date</dt>
+						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{end_date}}</dd>
+					</div>
+				</dl>
 				<button type="button"
 					class="flex select-none items-center gap-3 rounded-lg border border-gray-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-gray-500 transition-all hover:opacity-75 focus:ring focus:ring-gray-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
 					hx-get="/search.html" hx-target="#container">Cancel</button>
 			</div>
 			<div>
 			</div>
-			<div>
-				<button type="button"
-					class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">Start
-					reservation</button> <!-- TODO to be implemented -->
+			<div id="sidebar">
+				<div class="py-4">
+					<span id="trip-price">Price unknown, trying to load...</span>
+				</div>
+				<form
+					id="trip-reservation-form"
+					hx-get="/api/price_calculator/calculate_price"
+					hx-trigger="load, every 5s, change"
+					hx-target="#trip-price"
+					handlebars-template="trip-price-template"
+				>
+					<!-- TODO: we do not have geolocation data for bus/flight stops, only for hotels -->
+					<input type="hidden" name="id" value="{{id}}" />
+					<input type="hidden" name="destLatitude" value="{{hotel.latitude}}" />
+					<input type="hidden" name="destLongitude" value="{{hotel.longitude}}" />
+					<input type="hidden" name="duration" value="{{duration}}" />
+					<!-- TODO: we technically should have data for number of people from the search but it needs to be returned by the /trip API -->
+					<input type="hidden" name="numPeople" value="1" />
+					<!-- TODO: we technically should have data for transport type from the search but it needs to be returned by the /trip API -->
+					<input type="hidden" name="transportType" value="bus" />
+					<input type="hidden" name="hotelRating" value="{{hotel.hotel_rating}}" />
+					<label class="block py-3">
+						<span class="block text-sm font-medium text-slate-700">Room type</span>
+						<select name="room">
+							{{#each hotel.rooms}}
+							<option value="{{this.title}}">{{this.title}}</option>
+							{{/each}}
+						</select>
+					</label>
+					<label class="block py-3">
+						<span class="block text-sm font-medium text-slate-700">Meal package</span>
+						<select name="mealType">
+							{{#each hotel.meals}}
+							<option value="{{this}}">{{this}}</option>
+							{{/each}}
+						</select>
+					</label>
+					<button
+						type="button"
+						class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+						hx-get="/api/mocked/create_reservation"
+						hx-include="#trip-reservation-form"
+						hx-target="#container"
+						handlebars-template="active-reservation"
+					>
+						Start reservation
+					</button>
+				</form>
 			</div>
 		</div>
 	</template>
+	<template id="active-reservation">
+		<div class="py-4">
+			Reservation active, time left:
+			<span id="reservation-time-left">60 seconds</span>
+		</div>
+		<form
+			hx-get="/api/mocked/confirm_reservation"
+			hx-target="#container"
+			class="py-4"
+		>
+			<input type="hidden" name="id" value="{{id}}" />
+			<button
+				type="submit"
+				class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+			>
+				Purchase the offer
+			</button>
+		</form>
+		<script type="text/javascript">
+			let reservedUntil = Date.parse("{{{reserved_until}}}");
+			let interval = setInterval(() => {
+				let now = new Date().getTime()
+				let duration = reservedUntil - now
+				let seconds = Math.floor(duration / 1000)
+				let el = document.getElementById("reservation-time-left")
+				el.innerHTML = `${seconds} seconds`
+				if (seconds < 0) {
+					clearInterval(interval)
+				}
+			}, 1000)
+		</script>
+	</template>
+	<template id="trip-price-template">
+		PLN {{price}}
+	</template>
+
+	<script type="text/javascript">
+		Handlebars.registerHelper("stars", function(hotelRating) {
+			console.log(hotelRating)
+			console.log(Math.floor(hotelRating / 10))
+			console.log(hotelRating % 10)
+			console.log(hotelRating % 10 == 5)
+			let ret = ""
+			ret += "&#9733;".repeat(Math.floor(hotelRating / 10))
+			if (hotelRating % 10 == 5) {
+				ret += "&#11240;"
+			}
+			return new Handlebars.SafeString(ret)
+		})
+	</script>
 </body>
 
 </html>
