--- a/static/html/login.html
+++ b/static/html/login.html
@@ -1,7 +1,7 @@
 <body>
 	<script src="https://unpkg.com/htmx.org@1.9.11"></script>
 	<script src="https://unpkg.com/htmx.org@1.9.11/dist/ext/client-side-templates.js"></script>
-	<script src="https://unpkg.com/mustache@latest"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<div
 		class="my-3 rounded-md outline-1 box-border border-2 shadow-md flex justify-between gap-x-6 py-5 min-w-0 gap-x-4 space-x-4 px-5 md:container md:mx-auto px-8 content-center">
