--- a/static/html/search.html
+++ b/static/html/search.html
@@ -1,5 +1,5 @@
 <input class="w-full rounded-md my-2 bg-transparent px-4 py-1 text-gray-400 focus:outline-none outline-1 border-2"
-    name="search" hx-get="/api/mocked/get_trips" hx-trigger="input changed delay 250ms, search" hx-swap="innerHTML"
+    name="search" hx-get="/api/mocked/get_trips" hx-trigger="input changed delay 250ms, search" hx-swap="innerHTML" hx-indicator="#indicator-ignore"
     hx-target="#results" class="form-control" type="search" handlebars-template="trip" />
 <div id="results">
     <p class="my-10 items-center text-center justify-between mx-auto">Start typing to see the results...</p>
