--- a/static/html/search.html
+++ b/static/html/search.html
@@ -13,11 +13,11 @@
            id="num_under_10" name="num_under_10" class="form-control" type="number" min="0"  value="0"/>
     <input class="w-full rounded-md my-2 bg-transparent px-4 py-1 text-gray-400 focus:outline-none outline-1 border-2"
            id="num_under_18" name="num_under_18" class="form-control" type="number" min="0"  value="0"/>
-    <input type="submit" value="Submit"
+    <input type="submit" value="Szukaj" name="Krzys"
            class="select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle
            font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring
            focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
 </form>
 <div id="results">
-    <p class="my-10 items-center text-center justify-between mx-auto">Zacznij pisać, aby wyświetlić listę...</p>
+    <p class="my-10 items-center text-center justify-between mx-auto">Kliknij Szukaj, aby wyświetlić listę</p>
 </div>
