--- a/static/html/index.html
+++ b/static/html/index.html
@@ -70,8 +70,8 @@
 			class="my-3 rounded-md outline-1 box-border border-2 shadow-md flex justify-between gap-x-6 py-5 flex min-w-0 gap-x-4 space-x-4 px-5">
 			<div>
 				<p class="break-afer-auto text-base font-semibold leading-7 text-gray-900">
-					{{name}} {{stars hotel_rating}}</p>
-				<p class="mt-1 text-xs leading-6 text-gray-500">{{{description}}}</p>
+					{{tour.title}} {{stars tour.hotel_rating}}</p>
+				<p class="mt-1 text-xs leading-6 text-gray-500">{{{tour.description}}}</p>
 				<dl class="divide-y divide-gray-100 py-2">
 					<div class="px-4 py-3 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
 						<dt class="text-sm font-medium leading-6 text-gray-900">Rooms left</dt>
@@ -79,15 +79,16 @@
 							hx-get="/api/mocked/trip_rooms_left?id={{id}}"
 							hx-swap="innerHTML"
 							hx-trigger="every 5s"
-						>{{hotel_rooms_left}}</dd>
+							hx-indicator="#indicator-ignore"
+						>{{tour.hotel_rooms_left}}</dd>
 					</div>
 					<div class="px-4 py-3 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
 						<dt class="text-sm font-medium leading-6 text-gray-900">Start date</dt>
-						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{start_date}}</dd>
+						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{tour.start_date}}</dd>
 					</div>
 					<div class="px-4 py-3 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
 						<dt class="text-sm font-medium leading-6 text-gray-900">End date</dt>
-						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{end_date}}</dd>
+						<dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">{{tour.end_date}}</dd>
 					</div>
 				</dl>
 				<button type="button"
@@ -108,44 +109,36 @@
 					hx-indicator="#indicator-ignore"
 					handlebars-template="trip-price-template"
 				>
-					<input type="hidden" name="id" value="{{id}}" />
-					<input type="hidden" name="destLatitude" value="{{geolocation.lat}}" />
-					<input type="hidden" name="destLongitude" value="{{geolocation.lng}}" />
-					<input type="hidden" name="duration" value="{{duration}}" />
-					<!-- TODO: we technically should have data for number of people from the search but it needs to be returned by the /trip API -->
-					<input type="hidden" name="numPeople" value="1" />
-					<!-- TODO: we technically should have data for transport type from the search but it needs to be returned by the /trip API -->
-					<input type="hidden" name="transportType" value="bus" />
-					<input type="hidden" name="hotelRating" value="{{hotel_rating}}" />
-					<label class="block py-3">
-						<span class="block text-sm font-medium text-slate-700">Transport type</span>
-						<select name="transportType">
-							<option value="own">Own transport</option>
-							{{#if hotel_bus_routes.length}}
-							<option value="bus">Bus</option>
-							{{/if}}
-							{{#if hotel_flight_routes.length}}
-							<option value="flight">Plane</option>
-							{{/if}}
-						</select>
-					</label>
-					<!-- TODO: figure these out as two selects -->
+					<input type="hidden" name="trip_id" value="{{tour.id}}" />
+					<input type="hidden" name="destLatitude" value="{{tour.geolocation.lat}}" />
+					<input type="hidden" name="destLongitude" value="{{tour.geolocation.lng}}" />
+					<input type="hidden" name="duration" value="{{tour.duration}}" />
+					<input type="hidden" name="numPeople" value="{{numPeople}}" />
+					<input type="hidden" name="hotelRating" value="{{tour.hotel_rating}}" />
 					<label class="block py-3">
 						<span class="block text-sm font-medium text-slate-700">Transport</span>
-						<select name="routeId">
+						<select name="route_id">
 							<option value="own">Own transport</option>
-							{{#each hotel_bus_routes}}
-							<option value="bus-{{this.id}}">Bus from {{this.origin.city}}</option>
+							{{#each tour.hotel_bus_routes}}
+							<option
+								value="bus-{{this.id}}"
+							>
+								Bus from {{this.origin.city}}
+							</option>
 							{{/each}}
-							{{#each hotel_flight_routes}}
-							<option value="flight-{{this.id}}">Plane from {{this.origin.city}}</option>
+							{{#each tour.hotel_flight_routes}}
+							<option
+								value="flight-{{this.id}}"
+							>
+								Flight from {{this.origin.city}}
+							</option>
 							{{/each}}
 						</select>
 					</label>
 					<label class="block py-3">
 						<span class="block text-sm font-medium text-slate-700">Room type</span>
 						<select name="room">
-							{{#each hotel_rooms}}
+							{{#each tour.hotel_rooms}}
 							<option value="{{this.title}}">{{this.title}}</option>
 							{{/each}}
 						</select>
@@ -153,7 +146,7 @@
 					<label class="block py-3">
 						<span class="block text-sm font-medium text-slate-700">Meal package</span>
 						<select name="mealType">
-							{{#each hotel_meals}}
+							{{#each tour.hotel_meal_titles}}
 							<option value="{{this}}">{{this}}</option>
 							{{/each}}
 						</select>
@@ -161,7 +154,7 @@
 					<button
 						type="button"
 						class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-						hx-get="/api/mocked/create_reservation"
+						hx-get="/api/trip_reservations/create_reservation"
 						hx-include="#trip-reservation-form"
 						hx-target="#container"
 						hx-indicator="#processing-overlay"
@@ -180,7 +173,7 @@
 		</div>
 		<form
 			id="purchase-form"
-			hx-get="/api/mocked/confirm_reservation"
+			hx-get="/api/trip_reservations/confirm_reservation"
 			hx-target="#container"
 			class="py-4"
 		>
