--- a/static/html/index.html
+++ b/static/html/index.html
@@ -177,7 +177,7 @@
 			hx-target="#container"
 			class="py-4"
 		>
-			<input type="hidden" name="id" value="{{id}}" />
+			<input type="hidden" name="sagaId" value="{{sagaId}}" />
 			<button
 				type="submit"
 				class="flex select-none items-center gap-3 rounded-lg border border-blue-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-blue-500 transition-all hover:opacity-75 focus:ring focus:ring-blue-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
