--- a/static/html/index.html
+++ b/static/html/index.html
@@ -165,7 +165,7 @@
 	</template>
 	<template id="active-reservation">
 		<div id="reservation-status" class="py-4">
-			Reservation active, time left:
+			Reservation active, time left to buy:
 			<span id="reservation-time-left">60 seconds</span>
 		</div>
 		<form
@@ -185,7 +185,7 @@
 		<button id="cancel-button"
 			type="button"
 			class="flex select-none items-center gap-3 rounded-lg border border-gray-500 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-gray-500 transition-all hover:opacity-75 focus:ring focus:ring-gray-200 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-			hx-get="/search.html" hx-target="#container">Cancel</button>
+			hx-get="/search.html" hx-target="#container">Go back to tour search</button>
 		<script type="text/javascript">
 			(() => {
 				let reservedUntil = Date.parse("{{{reserved_until}}}");
