Clear interval when navigating away (#53)
* Clear interval when navigating away

* translate

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -28,7 +28,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<span hx-get="/api/test" hx-trigger="load"></span>
-	<button type="button" hx-get="/api/auth/logout">Logout</button>
+	<button type="button" hx-get="/api/auth/logout">Wyloguj się</button>
 	<div class="relative" hx-indicator="#processing-overlay">
 		<div id="processing-overlay" class="absolute bg-white bg-opacity-60 z-10 h-full w-full flex items-center justify-center htmx-indicator">
 			<div class="flex items-center">
@@ -204,6 +204,12 @@
 					let el = document.getElementById("reservation-time-left")
 					el.innerHTML = `${seconds} sekund`
 				}, 1000)
+				document.getElementById("cancel-button").addEventListener("click", (e) => {
+					clearInterval(interval)
+				})
+				document.getElementById("purchase-form").addEventListener("submit", (e) => {
+					clearInterval(interval)
+				})
 			})()
 		</script>
 	</template>
